integración de elementos gráficos

--- a/diseñouxyui.html
+++ b/diseñouxyui.html
@@ -33,6 +33,15 @@
                     de manera que orientan al consumidor dentro de la navegación. En los elementos podemos encontrar 
                     la tipografía, logo, íconos, paleta de colores, botones, etc. Además, de forma no visible, podemos interiorizar 
                     en el uso de grillas que permiten que la información expuesta dentro de la interfaz, se lea de una forma legible.</p>
+
+                    <div class="container" id="cuadrospequeños">
+                        <button type="button" class="btn btn-outline-secondary">User Experience</button>
+                        <button type="button" class="btn btn-outline-secondary">Usabilidad</button>
+                        <button type="button" class="btn btn-outline-secondary">Navegación</button>
+                        <button type="button" class="btn btn-outline-secondary">Emociones del Usuario</button>
+                        
+                        </div>
+
             </div>
             <div class="container-fluid" id="container_descripcion">
                 <h1>DISEÑO UX</h1>
@@ -42,6 +51,15 @@
                     siendo parte de un desarrollo el cual da paso a la mejora en cuanto a calidad de la interacción, 
                     centrándose más que nada en la sensación de la experiencia. </p>
             </div>
+
+                    <div class="container" id="cuadrospequeños">
+                        <button type="button" class="btn btn-outline-secondary">Gráfica</button>
+                        <button type="button" class="btn btn-outline-secondary">Interfaz</button>
+                        <button type="button" class="btn btn-outline-secondary">HTML</button>
+                        <button type="button" class="btn btn-outline-secondary">CSS</button>
+                        <button type="button" class="btn btn-outline-secondary">Javascript</button>
+
+                        </div>
 
         </main>
         <!-- footer  -->
