--- a/diseñouxyui.html
+++ b/diseñouxyui.html
@@ -34,15 +34,14 @@
                     la tipografía, logo, íconos, paleta de colores, botones, etc. Además, de forma no visible, podemos interiorizar 
                     en el uso de grillas que permiten que la información expuesta dentro de la interfaz, se lea de una forma legible.</p>
 
-                    <div class="container" id="cuadrospequeños">
-                        <button type="button" class="btn btn-outline-secondary">User Experience</button>
-                        <button type="button" class="btn btn-outline-secondary">Usabilidad</button>
-                        <button type="button" class="btn btn-outline-secondary">Navegación</button>
-                        <button type="button" class="btn btn-outline-secondary">Emociones del Usuario</button>
-                        
-                        </div>
-
+                <div class="container d-flex align-items-center justify-content-center cuadrospequenyos">
+                    <button type="button" class="btn btn-outline-secondary">User Experience</button>
+                    <button type="button" class="btn btn-outline-secondary">Usabilidad</button>
+                    <button type="button" class="btn btn-outline-secondary">Navegación</button>
+                    <button type="button" class="btn btn-outline-secondary">Emociones del Usuario</button>
+                </div>
             </div>
+
             <div class="container-fluid" id="container_descripcion">
                 <h1>DISEÑO UX</h1>
                 <p>Diseño de Experiencia de Usuario (UX) toma por definición como todo aquel diseño (digital o físico) 
@@ -50,20 +49,19 @@
                     Por medio de este se puede observar cómo se desenvuelve el usuario con las diferentes propuestas, 
                     siendo parte de un desarrollo el cual da paso a la mejora en cuanto a calidad de la interacción, 
                     centrándose más que nada en la sensación de la experiencia. </p>
+                <div class="container d-flex align-items-center justify-content-center cuadrospequenyos">
+                    <button type="button" class="btn btn-outline-secondary">Gráfica</button>
+                    <button type="button" class="btn btn-outline-secondary">Interfaz</button>
+                    <button type="button" class="btn btn-outline-secondary">HTML</button>
+                    <button type="button" class="btn btn-outline-secondary">CSS</button>
+                    <button type="button" class="btn btn-outline-secondary">Javascript</button>
+                </div>
             </div>
+        </div>
 
-                    <div class="container" id="cuadrospequeños">
-                        <button type="button" class="btn btn-outline-secondary">Gráfica</button>
-                        <button type="button" class="btn btn-outline-secondary">Interfaz</button>
-                        <button type="button" class="btn btn-outline-secondary">HTML</button>
-                        <button type="button" class="btn btn-outline-secondary">CSS</button>
-                        <button type="button" class="btn btn-outline-secondary">Javascript</button>
-
-                        </div>
-
-        </main>
-        <!-- footer  -->
-        <div id="footer"></div>
+    </main>
+    <!-- footer  -->
+    <div id="footer"></div>
     
         <!-- bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
