--- a/investigacióndeusuario.html
+++ b/investigacióndeusuario.html
@@ -34,33 +34,35 @@
                     todo con el fin general de esta área, que se basa en entregar una experiencia gratificante al usuario.</p>
             </div>
             <div class="container-fluid" id="reactangulo">
-                <h2>ETAPAS</h2>
-                <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
-                    Ut enin ad ninin venian, quis nostrun exercitationen.</p>
-                <div class="row justify-content-center">
-                    <div class="cuadrado"></div>
+                <h2>¿COMO CONOCER AL USUARIO?</h2>
+                <div class="container-img">
+                  <img src="/img/paso1comoconoceralusuario.png" width="250px">
+                  <img src="/img/paso2acomoconoceralusuario.png"width="250px" > 
                 </div>
-            </div>
+                <div class="container-imagen">
+                    <img src="/img/paso3comoconoceralusuario.png" width="250px">
+                    <img src="/img/paso4comoconoceralusuario.png"width="250px" > 
+                  </div>
+                </div>
             
             <div class="container-fluid" id="reactangulo">
-                <h2>¿COMO CONOCER AL USUARIO?</h2>
-                <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
-                    Ut enin ad ninin venian, quis nostrun exercitationen.</p>
+                <h2>DOBLEDIAMANTE</h2>
                 <div class="row justify-content-center">
                     <div class="cuadrado"></div>
                 </div>
             </div>
 
             <div class="container-fluid" id="reactangulo">
-                <h2>¿COMO CONOCER AL USUARIO?</h2>
+                <h2>DISEÑAR UNA SOLUCIÓN</h2>
                 <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
                     Ut enin ad ninin venian, quis nostrun exercitationen.</p>
-                <div class="row justify-content-center">
-                    <div class="cuadrado"></div>
+                    <div class="container-img">
+                        <img src="/img/2.3.3   Diseñar una Solución.png" width="600px">
+                      </div>
                 </div>
             </div>
         </div>
-    </div>
+
         
 
     </main>
