--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- styles.css -->
     <link rel="stylesheet" href="styles.css">
     <!-- nav.css -->
-    <link rel="stylesheet" href="/nav/nav.css">
+    <link rel="stylesheet" href="nav/nav.css">
     <!-- cookie -->
-    <link rel="stylesheet" href="/cookie/cookie.css">
+    <link rel="stylesheet" href="cookie/cookie.css">
     <!-- footer.css -->
-    <link rel="stylesheet" href="/footer/footer.css">
+    <link rel="stylesheet" href="footer/footer.css">
 </head>
 <body>
     <div class="container" id="imagendefondo">
@@ -102,7 +102,7 @@
                            significativo a la sociedad.</p>
                     </div>
                     <div class="col-6">
-                        <img src="/img/BOTONTIPOSDEDISEÑO2.png" alt="Descripción de la imagen" id="BOTONventana">
+                        <img src="img/BOTONTIPOSDEDISEÑO2.png" alt="Descripción de la imagen" id="BOTONventana">
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                            el pensamiento previo a propuestas de diseño digitales que permiten la interacción entre el usuario y servicio.</p>
                     </div>
                     <div class="col-6">
-                        <img src="/img/BOTONDISEÑOUXUI2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="img/BOTONDISEÑOUXUI2.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                            damos a conocer diferentes oportunidades laborales que pueden ser de tú interés.</p>
                     </div>
                     <div class="col-6">
-                        <img src="/img/BOTONCAMPOLABORAL2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="img/BOTONCAMPOLABORAL2.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                            al usuario con la finalidad de obtener respuestas que se desarrollan dentro de una próxima propuesta de solución.</p>
                     </div>
                     <div class="col-6">
-                        <img src="/img/BOTONINVESTIGACIÓNDEUSUARIO2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="img/BOTONINVESTIGACIÓNDEUSUARIO2.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -147,10 +147,10 @@
     <!-- franja 2 -->
     <div class="container-fluid" id="franja_2">
         <div class="container" id="franja_2_contenido">
-            <h2><a href="/patrones.html" class="link-sin-estilo">PATRONES</a></h2>
+            <h2><a href="patrones.html" class="link-sin-estilo">PATRONES</a></h2>
         </div>
         <div class="container" id="franja_2_contenido">
-            <h2><a href="/patronesoscuros.html" class="link-sin-estilo">PATRONES OSCUROS</a></h2>
+            <h2><a href="patronesoscuros.html" class="link-sin-estilo">PATRONES OSCUROS</a></h2>
         </div>
     </div>
     <!-- Nuestro objetivo -->
@@ -179,7 +179,7 @@
         
     </div>
     <div class="container justify-content-center" id="containerfondo">
-    <img src="/img/fondo2.png" alt="Descripción de la imagen" id="fondofinal">
+    <img src="img/fondo2.png" alt="Descripción de la imagen" id="fondofinal">
     </div>
 
 
@@ -192,8 +192,8 @@
     <!-- js -->
     <script src="scripts.js" async defer></script>
     <!-- nav.js -->
-    <script src="/nav/nav.js"></script>
+    <script src="nav/nav.js"></script>
             <!-- footer.js -->
-            <script src="/footer/footer.js"></script>
+            <script src="footer/footer.js"></script>
 </body>
 </html>
