--- a/investigacióndeusuario.html
+++ b/investigacióndeusuario.html
@@ -36,12 +36,12 @@
             <div class="container-fluid" id="reactangulo">
                 <h2>¿COMO CONOCER AL USUARIO?</h2>
                 <div class="container-img">
-                  <img src="/img/paso1comoconoceralusuario.png" width="250px">
-                  <img src="/img/paso2acomoconoceralusuario.png"width="250px" > 
+                  <img src="img/paso1comoconoceralusuario.png" width="250px">
+                  <img src="img/paso2acomoconoceralusuario.png"width="250px" > 
                 </div>
                 <div class="container-imagen">
-                    <img src="/img/paso3comoconoceralusuario.png" width="250px">
-                    <img src="/img/paso4comoconoceralusuario.png"width="250px" > 
+                    <img src="img/paso3comoconoceralusuario.png" width="250px">
+                    <img src="img/paso4comoconoceralusuario.png"width="250px" > 
                   </div>
                 </div>
             
@@ -75,8 +75,8 @@
     <!-- js -->
     <script src="#" async defer></script>
     <!-- nav.js -->
-    <script src="/nav/nav.js"></script>
+    <script src="nav/nav.js"></script>
     <!-- footer  -->
-    <script src="/footer/footer.js"></script>
+    <script src=" footer/footer.js"></script>
 </body>
 </html>
