--- a/patrones.html
+++ b/patrones.html
@@ -64,8 +64,8 @@
     <!-- js -->
     <script src="#" async defer></script>
     <!-- nav.js -->
-    <script src="/nav/nav.js"></script>
+    <script src="nav/nav.js"></script>
     <!-- footer  -->
-    <script src="/footer/footer.js"></script>
+    <script src="footer/footer.js"></script>
 </body>
 </html>
