--- a/diseñouxyui.html
+++ b/diseñouxyui.html
@@ -13,11 +13,11 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- styles.css -->
-    <link rel="stylesheet" href="/css/patrones.css">
+    <link rel="stylesheet" href="css/patrones.css">
     <!-- nav.css -->
-    <link rel="stylesheet" href="/nav/nav.css">
+    <link rel="stylesheet" href="nav/nav.css">
     <!-- footer.css -->
-    <link rel="stylesheet" href="/footer/footer.css">
+    <link rel="stylesheet" href="footer/footer.css">
 </head>
 <body>
     <!-- nav barra -->
@@ -69,8 +69,8 @@
         <!-- js -->
         <script src="#" async defer></script>
         <!-- nav.js -->
-        <script src="/nav/nav.js"></script>
+        <script src="nav/nav.js"></script>
         <!-- footer  -->
-        <script src="/footer/footer.js"></script>
+        <script src="footer/footer.js"></script>
     </body>
     </html>            
