--- a/nav/nav.html
+++ b/nav/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar" id="nav">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html" id="nav_home">NODEUX</a>
+        <a class="navbar-brand" href="index.html" id="nav_home">NODEUX</a>
         <div class="d-flex"> 
             <!-- Acerca de -->
             <div class="nav-item dropdown">
