--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -13,13 +13,13 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- styles.css -->
-    <link rel="stylesheet" href="/css/patronesoscuros.css">
+    <link rel="stylesheet" href="css/patronesoscuros.css">
     <!-- nav.css -->
-    <link rel="stylesheet" href="/nav/nav.css">
+    <link rel="stylesheet" href="nav/nav.css">
     <!-- loader distraccion -->
-    <link rel="stylesheet" href="/loader/loader.css">
+    <link rel="stylesheet" href="loader/loader.css">
     <!-- footer.css -->
-    <link rel="stylesheet" href="/footer/footer.css">
+    <link rel="stylesheet" href="footer/footer.css">
 </head>
 <body>
     <!-- nav barra -->
