--- a/tiposdediseño.html
+++ b/tiposdediseño.html
@@ -13,13 +13,13 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- styles.css -->
-    <link rel="stylesheet" href="/css/tiposdediseño.css">
+    <link rel="stylesheet" href="css/tiposdediseño.css">
     <!-- nav.css -->
-    <link rel="stylesheet" href="/nav/nav.css">
+    <link rel="stylesheet" href="nav/nav.css">
     <!-- loader distraccion -->
-    <link rel="stylesheet" href="/loader/loader.css">
+    <link rel="stylesheet" href="loader/loader.css">
     <!-- footer.css -->
-    <link rel="stylesheet" href="/footer/footer.css">
+    <link rel="stylesheet" href="footer/footer.css">
 </head>
 <body>
     <!-- nav barra -->
@@ -56,7 +56,7 @@
             <!-- Contenido oculto aquí -->
             <h2>DISEÑO INDUSTRIAL</h2>
             <div class="col-5">
-                <img src="/img/Diseno_Industrial.png" id="imagen_industrial">
+                <img src="img/Diseno_Industrial.png" id="imagen_industrial">
             </div>
             <div class="col-7">
                 <p>Desde electrodomésticos, muebles, maquinaria, etc. El diseño industrial se encarga de diseñar objetos
@@ -81,7 +81,7 @@
                 <!-- Contenido oculto aquí -->
                 <h2>DISEÑO GRÁFICO</h2>
             <div class="col-5">
-                <img src="/img/Diseno_Grafico.png" id="imagen_grafico">
+                <img src="img/Diseno_Grafico.png" id="imagen_grafico">
             </div>
             <div class="col-7">
                 <p>Dentro de las ramas del diseño gráfico, nos podemos introducir en disciplinas creativas donde,
@@ -108,7 +108,7 @@
             <!-- Contenido oculto aquí -->
             <h2>DISEÑO DE INTERACCIÓN</h2>
             <div class="col-5">
-                <img src="/img/Diseno_de_Interaccion.png" id="imagen_interaccion">
+                <img src="img/Diseno_de_Interaccion.png" id="imagen_interaccion">
             </div>
             <div class="col-7">
                 <p>El diseño de interacción se destaca por su enfoque en la relación entre usuario y servicio,
