--- a/investigacióndeusuario.html
+++ b/investigacióndeusuario.html
@@ -13,11 +13,11 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- styles.css -->
-    <link rel="stylesheet" href="/css/investigacióndeusuario.css">
+    <link rel="stylesheet" href="css/investigacióndeusuario.css">
     <!-- nav.css -->
-    <link rel="stylesheet" href="/nav/nav.css">
+    <link rel="stylesheet" href="nav/nav.css">
     <!-- footer.css -->
-    <link rel="stylesheet" href="/footer/footer.css">
+    <link rel="stylesheet" href="footer/footer.css">
 </head>
 <body>
     <!-- nav barra -->
@@ -57,7 +57,7 @@
                 <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
                     Ut enin ad ninin venian, quis nostrun exercitationen.</p>
                     <div class="container-img">
-                        <img src="/img/2.3.3   Diseñar una Solución.png" width="600px">
+                        <img src="img/2.3.3   Diseñar una Solución.png" width="600px">
                       </div>
                 </div>
             </div>
@@ -77,6 +77,6 @@
     <!-- nav.js -->
     <script src="nav/nav.js"></script>
     <!-- footer  -->
-    <script src=" footer/footer.js"></script>
+    <script src="footer/footer.js"></script>
 </body>
 </html>
