--- a/complementos/oscurecimientoprivacidad.html
+++ b/complementos/oscurecimientoprivacidad.html
@@ -77,8 +77,8 @@
             <p>Para continuar utilizando nuestro sitio web, necesitamos tu consentimiento para recopilar y procesar ciertos datos personales. Por favor, lee nuestra política de privacidad detenidamente antes de tomar una decisión.</p>
             <p>Al hacer clic en "Aceptar", aceptas nuestra política de privacidad y nos autorizas a recopilar y procesar tus datos de acuerdo con lo establecido en la misma.</p>
             <p><a href="politica_privacidad.html" target="_blank">Leer Política de Privacidad</a></p>
-            <button id="acceptButton" onclick="window.location.href='patronesoscuros.html';">Aceptar</button>
-            <button id="rejectButton" onclick="window.location.href='patronesoscuros.html';">Rechazar</button>
+            <button id="acceptButton" onclick="window.location.href='../patronesoscuros.html';">Aceptar</button>
+            <button id="rejectButton" onclick="window.location.href='../patronesoscuros.html';">Rechazar</button>
         </div>
         <!-- Fin del ejemplo -->
     </div>
