--- a/complementos/suscripcion.html
+++ b/complementos/suscripcion.html
@@ -76,7 +76,7 @@
             <label for="password">Cree una contraseña:</label><br>
             <input type="password" id="password" name="password" style="margin-bottom: 10px;"><br>
         </form>
-        <button id="subscribeButton" style="padding: 10px 20px; background-color: #0D5552; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='patronesoscuros.html';">¡Haz clic aquí para recibir tu suscripcion!</button>
+        <button id="subscribeButton" style="padding: 10px 20px; background-color: #0D5552; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='../patronesoscuros.html';">¡Haz clic aquí para recibir tu suscripcion!</button>
     </div>
 
 <script>
