--- a/complementos/anunciosdisfrazados.html
+++ b/complementos/anunciosdisfrazados.html
@@ -72,7 +72,7 @@
             <h2>Los 10 beneficios sorprendentes de usar XYZ</h2>
             <p>Descubre por qué XYZ es el mejor producto del mercado y cómo puede mejorar tu vida.</p>
         </div>
-        <button id="subscribeButton" style="padding: 10px 20px; background-color: #0D5552; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='patronesoscuros.html';">¡Haz clic aquí para recibir tu regalo!</button>
+        <button id="subscribeButton" style="padding: 10px 20px; background-color: #0D5552; color: #fff; border: none; border-radius: 4px; cursor: pointer;" onclick="window.location.href='../patronesoscuros.html';">¡Haz clic aquí para recibir tu regalo!</button>
     </div>
 
     <script>
