implementación de graficas

--- a/footer/footer.html
+++ b/footer/footer.html
@@ -6,6 +6,7 @@
                 <p>Nuestra misión es informar a los usuarios sobre los patrones 
                     oscuros y los tipos que existen para evitar que 
                     caigan en estos.</p>
+                    <img src="img/correo.png" id="BOTONredessociales"><img src="img/instagram.png" id="BOTONredessociales2">    
             </div>
 
         </div>
