--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
         </div>
     </div>
 
+    <div class="contenedor">
+        <div class="rectangulopestaña"></div>
+    </div>
 
-    <div class="rectangulopestaña"></div>
     <!-- franja 1 -->
     <div class="container-fluid" id="franja_1">
         <h2>¿QUÉ ES EL DISEÑO?</h2>
@@ -102,7 +104,7 @@
                            significativo a la sociedad.</p>
                     </div>
                     <div class="col-6">
-                        <img src="img/BOTONTIPOSDEDISEÑO2.png" alt="Descripción de la imagen" id="BOTONventana">
+                        <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">
                     </div>
                 </div>
             </div>
@@ -114,7 +116,7 @@
                            el pensamiento previo a propuestas de diseño digitales que permiten la interacción entre el usuario y servicio.</p>
                     </div>
                     <div class="col-6">
-                        <img src="img/BOTONDISEÑOUXUI2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -126,7 +128,7 @@
                            damos a conocer diferentes oportunidades laborales que pueden ser de tú interés.</p>
                     </div>
                     <div class="col-6">
-                        <img src="img/BOTONCAMPOLABORAL2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -138,7 +140,7 @@
                            al usuario con la finalidad de obtener respuestas que se desarrollan dentro de una próxima propuesta de solución.</p>
                     </div>
                     <div class="col-6">
-                        <img src="img/BOTONINVESTIGACIÓNDEUSUARIO2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -180,7 +182,6 @@
     <div class="container justify-content-center" id="containerfondo">
     <img src="img/fondo2.png" alt="Descripción de la imagen" id="fondofinal">
     </div>
-
     <!-- footer  -->
     <div id="footer"></div>
     <!-- bootstrap -->
