--- a/footer/footer.html
+++ b/footer/footer.html
@@ -1,14 +1,14 @@
 <footer>
-    <div class="container">
+    <div class="container" id="footer">
         <div class="row">
             <div class="col-4">
                 <h3>NodeUx</h3>
                 <p>Nuestra misión es informar a los usuarios sobre los patrones 
                     oscuros y los tipos que existen para evitar que 
                     caigan en estos.</p>
-                    <img src="img/correo.png" id="BOTONredessociales"><img src="img/instagram.png" id="BOTONredessociales2">    
+                    <img src="img/correo.png" alt="Botones del footer" id="BOTONredessociales">
+                    <img src="img/instagram.png" alt="Botones del footer" id="BOTONredessociales2">    
             </div>
-
         </div>
     </div>
 </footer>
