--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     <link rel="stylesheet" href="styles.css">
     <!-- nav.css -->
     <link rel="stylesheet" href="nav/nav.css">
-    <!-- cookie -->
-    <link rel="stylesheet" href="cookie/cookie.css">
     <!-- footer.css -->
     <link rel="stylesheet" href="footer/footer.css">
 </head>
@@ -26,38 +24,37 @@
     <div class="container" id="imagendefondo">
         <!-- nav barra -->
         <div id="nav"></div>
-
-        <!-- circulos -->
+        <!-- rectangulos -->
         <div class="container" id="container_principal">
-            <div class="row" id="row_circulos_1">
-                <div class="col justify-content-center" id="col_circulos" >
+            <div class="row d-fle" id="row_rectangulos_1">
+                <div class="col justify-content-center" id="col_rectangulos" >
                     <div class="rectangulo" id="rectangulo_1">
                         <h3>UI</h3>
                     </div>
                 </div>
-                <div class="col justify-content-center" id="col_circulos">
+                <div class="col justify-content-center" id="col_rectangulos">
                     <div class="rectangulo" id="rectangulo_2">
                         <h3>DISEÑO</h3>
                     </div>
                 </div>
-                <div class="col justify-content-center" id="col_circulos">
+                <div class="col justify-content-center" id="col_rectangulos">
                     <div class="rectangulo" id="rectangulo_3">
                         <h3>UX</h3>
                     </div>
                 </div>
             </div>
-            <div class="row" id="row_circulos_2">
-                <div class="col justify-content-center" id="col_circulos">
+            <div class="row" id="row_rectangulos_2">
+                <div class="col justify-content-center " id="col_rectangulos">
                     <div class="rectangulo" id="rectangulo_4">
                         <h3>PATRONES OSCUROS</h3>
                     </div>
                 </div>
-                <div class="col justify-content-center" id="col_circulos">
+                <div class="col justify-content-center" id="col_rectangulos">
                     <div class="rectangulo" id="rectangulo_5">
                         <h3>PATRONES</h3>
                     </div>
                 </div>
-                <div class="col justify-content-center" id="col_circulos">
+                <div class="col justify-content-center" id="col_rectangulos">
                     <div class="rectangulo" id="rectangulo_6">
                         <h3>CAMPO LABORAL</h3>
                     </div>
@@ -66,10 +63,8 @@
         </div>
     </div>
 
-    <div class="contenedor">
-        <div class="rectangulopestaña"></div>
-    </div>
 
+    <div class="rectangulopestaña"></div>
     <!-- franja 1 -->
     <div class="container-fluid" id="franja_1">
         <h2>¿QUÉ ES EL DISEÑO?</h2>
@@ -104,7 +99,7 @@
                            significativo a la sociedad.</p>
                     </div>
                     <div class="col-6">
-                        <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">
+                        <img src="img/BOTONTIPOSDEDISEÑO2.png" alt="Descripción de la imagen" id="BOTONventana">
                     </div>
                 </div>
             </div>
@@ -116,7 +111,7 @@
                            el pensamiento previo a propuestas de diseño digitales que permiten la interacción entre el usuario y servicio.</p>
                     </div>
                     <div class="col-6">
-                        <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="img/BOTONDISEÑOUXUI2.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -128,7 +123,7 @@
                            damos a conocer diferentes oportunidades laborales que pueden ser de tú interés.</p>
                     </div>
                     <div class="col-6">
-                        <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="img/BOTONCAMPOLABORAL2.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -140,7 +135,7 @@
                            al usuario con la finalidad de obtener respuestas que se desarrollan dentro de una próxima propuesta de solución.</p>
                     </div>
                     <div class="col-6">
-                        <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="img/BOTONINVESTIGACIÓNDEUSUARIO2.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -182,6 +177,7 @@
     <div class="container justify-content-center" id="containerfondo">
     <img src="img/fondo2.png" alt="Descripción de la imagen" id="fondofinal">
     </div>
+
     <!-- footer  -->
     <div id="footer"></div>
     <!-- bootstrap -->
