--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -77,7 +77,7 @@
             </p>
             <h3>CASO DE ESTUDIO</h3>
             <!-- Aqui va el temporizador o la pelota que va subiendo escalones -->
-            <div class="container text-center " id="cuadro_interactivo1">
+            <div class="container text-center d-flex align-items-center justify-content-center" id="cuadro_interactivo1">
                 <div class="loader-container">
                     <div class="loader"></div>
                     <div class="loader-text">Dark patterns, desviación de la atención del usuario de las cosas importantes</div>
@@ -300,8 +300,6 @@
             </div>
         </div>  
     </main>
-
-
     <!-- footer  -->
     <div id="footer"></div>
 
@@ -312,7 +310,6 @@
     <script src="js/patronesoscuros.js" async defer></script>
     <!-- nav.js -->
     <script src="nav/nav.js"></script>
-
     <!-- footer.js -->
     <script src="footer/footer.js"></script>
 </body>
