--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                            significativo a la sociedad.</p>
                     </div>
                     <div class="col-6">
-                        <img src="img/BOTONTIPOSDEDISEÑO2.png" alt="Descripción de la imagen" id="BOTONventana">
+                        <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                            el pensamiento previo a propuestas de diseño digitales que permiten la interacción entre el usuario y servicio.</p>
                     </div>
                     <div class="col-6">
-                        <img src="img/BOTONDISEÑOUXUI2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                            damos a conocer diferentes oportunidades laborales que pueden ser de tú interés.</p>
                     </div>
                     <div class="col-6">
-                        <img src="img/BOTONCAMPOLABORAL2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                            al usuario con la finalidad de obtener respuestas que se desarrollan dentro de una próxima propuesta de solución.</p>
                     </div>
                     <div class="col-6">
-                        <img src="img/BOTONINVESTIGACIÓNDEUSUARIO2.png" alt="Descripción de la imagen" id="BOTONventana">  
+                        <img src="img/BOTONSABERMÁS.png" alt="Descripción de la imagen" id="BOTONventana">  
                     </div>
                 </div>
             </div>
