--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 
     <!-- franja 2 -->
     <div class="container-fluid" id="franja_2">
-        <div class="container" id="franja_2_contenido">
+        <div class="container">
             <h2><a href="patrones.html" class="link-sin-estilo">PATRONES</a></h2>
         </div>
-        <div class="container" id="franja_2_contenido">
+        <div class="container" >
             <h2><a href="patronesoscuros.html" class="link-sin-estilo">PATRONES OSCUROS</a></h2>
         </div>
     </div>
