--- a/campolaboral.html
+++ b/campolaboral.html
@@ -42,8 +42,8 @@
         <h2>CATEGORÍAS</h2>
 
         <!-- FILA1 -->
-        <div class="row container_tiple container_tiple">
-            <div class="col-2" id="bock_click1">
+        <div class="row container_tiple">
+            <div class="col-2" id="bock_click1" data-target="contenido-1">
                 <h3 class="label titulo_categoria" >DISEÑADOR UX/UI
                 <span class="triangulo"></span></h3>
             </div>
@@ -67,8 +67,8 @@
         </div>
 
         <!-- FILA2 -->
-        <div class="row container_tiple display-flex">
-            <div class="col-3" id="bock_click2">
+        <div class="row container_tiple d-flex" >
+            <div class="col-3" id="bock_click2" data-target="contenido-2">
                 <h3 class="titulo_categoria">INVESTIGADOR UX <span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
@@ -93,8 +93,8 @@
         </div>
 
         <!-- FILA3 -->
-        <div class="row container_tiple display-flex">
-            <div class="col-3" id="bock_click3">
+        <div class="row container_tiple d-flex">
+            <div class="col-3" id="bock_click3" data-target="contenido-3">
                 <h3 class="titulo_categoria">REDACTOR UX<span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
@@ -120,8 +120,8 @@
 
                 
         <!-- FILA4 -->
-        <div class="row container_tiple display-flex" id="bock_click4">
-            <div class="col-3" id="bock_click4">
+        <div class="row container_tiple d-flex" id="bock_click4">
+            <div class="col-3" id="bock_click4" data-target="contenido-4">
                 <h3 class="titulo_categoria">LÍDER DE DISEÑO UX<span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
@@ -146,8 +146,8 @@
         </div>
      
         <!-- FILA 5 -->
-        <div class="row container_tiple display-flex" id="bock_click5">
-            <div class="col-3" id="bock_click">
+        <div class="row container_tiple d-flex" id="bock_click5">
+            <div class="col-3" id="bock_click" data-target="contenido-5">
                 <h3 class="titulo_categoria">ARQUITECTO DE LA INFORMACIÓN<span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
@@ -171,8 +171,8 @@
         </div>
 
         <!-- FILA6 -->
-        <div class="row container_tiple display-flex" id="bock_click6">
-            <div class="col-3" id="bock_click">
+        <div class="row container_tiple d-flex" id="bock_click6">
+            <div class="col-3" id="bock_click" data-target="contenido-6">
                 <h3 class="titulo_categoria">DESARROLLADOR WEB<span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
@@ -198,8 +198,8 @@
         </div>                
 
         <!-- FILA7 -->
-        <div class="row container_tiple display-flex" id="bock_click7">
-            <div class="col-3" id="bock_click">
+        <div class="row container_tiple d-flex" id="bock_click7">
+            <div class="col-3" id="bock_click" data-target="contenido-7">
                 <h3 class="titulo_categoria">CONSULTOR DE UX/UI<span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
@@ -222,8 +222,8 @@
         </div>  
 
         <!-- FILA8 -->
-        <div class="row container_tiple display-flex" id="bock_click7">
-            <div class="col-3" id="bock_click">
+        <div class="row container_tiple d-flex" id="bock_click8">
+            <div class="col-3" id="bock_click" data-target="contenido-8">
                 <h3 class="titulo_categoria">DISEÑADOR DE INTERACCIÓN<span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
@@ -247,8 +247,8 @@
         </div>  
 
         <!-- FILA9 -->
-        <div class="row container_tiple display-flex" id="bock_click7">
-            <div class="col-3" id="bock_click">
+        <div class="row container_tiple d-flex" id="bock_click9">
+            <div class="col-3" id="bock_click" data-target="contenido-9">
                 <h3 class="titulo_categoria">DISEÑADOR DE PUBLICIDAD DIGITAL<span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
