--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -55,7 +55,7 @@
 
         <!-- FILA1 -->
         <div class="row container_tiple container_tiple">
-            <div class="col-2" id="bock_click1">
+            <div class="col-2" id="bock_click1" data-target="contenido-manipulacion">
                 <h3 class="label titulo_categoria" >MANIPULACIÓN
                 <span class="triangulo"></span></h3>
             </div>
@@ -87,7 +87,7 @@
 
         <!-- FILA2 -->
         <div class="row container_tiple display-flex">
-            <div class="col-3" id="bock_click2">
+            <div class="col-3" id="bock_click2" data-target="contenido-emocional">
                 <h3 class="titulo_categoria">MANIPULACIÓN EMOCIONAL <span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
@@ -134,7 +134,7 @@
 
         <!-- FILA3 -->
         <div class="row container_tiple display-flex">
-            <div class="col-3" id="bock_click3">
+            <div class="col-3" id="bock_click3" data-target="contenido-oscurecimiento">
                 <h3 class="titulo_categoria">OSCURECIMIENTO DE PRIVACIDAD<span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
@@ -164,7 +164,7 @@
                 
         <!-- FILA4 -->
         <div class="row container_tiple display-flex" id="bock_click4">
-            <div class="col-3" id="bock_click4">
+            <div class="col-3" id="bock_click4" data-target="contenido-informacion">
                 <h3 class="titulo_categoria">OCULTACIÓN DE INFORMACIÓN<span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
@@ -205,7 +205,7 @@
         </div>   
         <!-- FILA 5 -->
         <div class="row container_tiple display-flex" id="bock_click5">
-            <div class="col-3" id="bock_click">
+            <div class="col-3" id="bock_click" data-target="contenido-suscripciones">
                 <h3 class="titulo_categoria">SUSCRIPCIONES INVOLUNTARIAS<span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
@@ -231,7 +231,7 @@
 
         <!-- FILA6 -->
         <div class="row container_tiple display-flex" id="bock_click6">
-            <div class="col-3" id="bock_click">
+            <div class="col-3" id="bock_click" data-target="contenido-urgencias">
                 <h3 class="titulo_categoria">URGENCIAS FALSAS<span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
@@ -276,7 +276,7 @@
 
         <!-- FILA7 -->
         <div class="row container_tiple display-flex" id="bock_click7">
-            <div class="col-3" id="bock_click">
+            <div class="col-3" id="bock_click" data-target="contenido-disfrazados">
                 <h3 class="titulo_categoria">ANUNCIOS DISFRAZADOS<span class="triangulo"></span></h3>
             </div>
             <div class="col-2" ></div>
