pestaña de la carpeta

--- a/diseñouxyui.html
+++ b/diseñouxyui.html
@@ -21,12 +21,14 @@
 </head>
 <body>
     <!-- nav barra -->
+    <!-- nav barra -->
     <div id="nav"></div>
-
     <main class="main">
-        <!-- cuadro principal -->
-        <div class="container justify-content-between" id="container_principal"> 
-            <div class="container-fluid" id="container_descripcion">
+    <!-- cuadro principal -->
+    <div class="rectangulopestaña"></div>
+    <div class="container justify-content-between" id="container_principal"> 
+        <!-- descripcion -->
+        <div class="container" id="descripcion">
                 <h1>DISEÑO UI</h1>
                 <p>Diseño de Interfaz de usuario (UI) se relaciona con el área del diseño gráfico. 
                     Dentro del, se incluyen elementos los cuales son una guía que complementan la información, 
