--- a/patrones.html
+++ b/patrones.html
@@ -25,6 +25,7 @@
 
     <main class="main">
         <!-- cuadro principal -->
+        <div class="rectangulopestaña"></div>
         <div class="container justify-content-between" id="container_principal"> 
             <div class="container-fluid" id="container_descripcion">
                 <h1>PATRONES</h1>
