--- a/que_buscamos.html
+++ b/que_buscamos.html
@@ -22,8 +22,9 @@
 <body>
     <!-- nav barra -->
     <div id="nav"></div>
-
+    
     <main class="main">
+        <div class="rectangulopestaña"></div>
         <div class="contaniner justify-content-between" id="container_principal">
             <div class="container">
                 <h1>QUÉ BUSCAMOS</h1>
