--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -22,7 +22,8 @@
 <body>
     <!-- nav barra -->
     <div id="nav"></div>
-
+    <!-- cuadro principal -->
+    <div class="rectangulopestaña"></div>
     <main class="main">
         <div class="contaniner justify-content-between" id="container_principal">
             <div class="container">
