--- a/diseñouxyui.html
+++ b/diseñouxyui.html
@@ -13,7 +13,7 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- styles.css -->
-    <link rel="stylesheet" href="css/patrones.css">
+    <link rel="stylesheet" href="css/diseñouxyui.css">
     <!-- nav.css -->
     <link rel="stylesheet" href="nav/nav.css">
     <!-- footer.css -->
@@ -21,14 +21,13 @@
 </head>
 <body>
     <!-- nav barra -->
-    <!-- nav barra -->
     <div id="nav"></div>
     <main class="main">
     <!-- cuadro principal -->
     <div class="rectangulopestaña"></div>
     <div class="container justify-content-between" id="container_principal"> 
         <!-- descripcion -->
-        <div class="container" id="descripcion">
+        <div class="container" id="container_descripcion1">
                 <h1>DISEÑO UI</h1>
                 <p>Diseño de Interfaz de usuario (UI) se relaciona con el área del diseño gráfico. 
                     Dentro del, se incluyen elementos los cuales son una guía que complementan la información, 
