--- a/que_buscamos.html
+++ b/que_buscamos.html
@@ -27,20 +27,21 @@
         <div class="rectangulopestaña"></div>
         <div class="contaniner justify-content-between" id="container_principal">
             <div class="container">
-                <h1>QUÉ BUSCAMOS</h1>
-                <p>Diseño de Interfaz de usuario (UI) se relaciona
-                     con el área del diseño gráfico. Dentro del,
-                      se incluyen elementos los cuales son una guía
-                       que complementan la información, de manera que
-                        orientan al consumidor dentro de la navegación.
-                         En los elementos podemos encontrar la tipografía,
-                          logo, íconos, paleta de colores, botones, etc. Además,
-                           de forma no visible, podemos interiorizar en el uso de
-                            grillas que permiten que la información expuesta dentro
-                             de la interfaz, se lea de una forma legible. </p>
-            </div>
-        </div>
-    </main>
+                <h1>QUIÉNES SOMOS</h1>
+                <p>Somos ArchivaDOCS, una oficina de Diseño enfocada en las áreas de 
+                        Interacción y Servicio con la visión de la Escuela de Arquitectura 
+                        y Diseño de la Pontificia Universidad Católica de Valparaíso, proveniente de Chile.
+                        Nuestro equipo consta de nueve diseñadores de carácter Gráfico,
+                         Industrial e Interacción con antecedentes de hasta cinco años de 
+                         experiencia en el estudio y formación de las áreas anteriormente mencionadas.
+                        </p>
+
+                <h1>QUE BUSCAMOS</h1>
+                <div class="container-img" id="img_center">
+                    <img src="img/1.2 Quiénes Somos (Metas y Servicios) (2).png" width="600px">
+                  </div>
+                </div>
+        </main>
     <!-- footer  -->
     <div id="footer"></div>
     
