--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -55,7 +55,7 @@
 
         <!-- FILA1 -->
         <div class="row container_tiple container_tiple">
-            <div class="col-2" id="bock_click1" data-target="contenido-manipulacion">
+            <div class="col-2" id="bock_click" data-target="contenido-manipulacion">
                 <h3 class="label titulo_categoria" >MANIPULACIÓN
                 <span class="triangulo"></span></h3>
             </div>
