--- a/tiposdediseño.html
+++ b/tiposdediseño.html
@@ -44,7 +44,7 @@
         <h2>ÁREAS</h2>
         <!-- FILA 1 -->
         <div class="row container_doble" id="bock_click1">
-            <div class="col-5">
+            <div class="col-5" id="bock_click" data-target="contenido-1">
                 <h3 class="titulo-manipulacion">DISEÑO INDUSTRIAL<span class="triangulo"></span></h3>
             </div>
             <div class="col-7">
@@ -52,8 +52,8 @@
                     pero que son beneficiosas para la interfaz o servicio.</p>
             </div>
         </div>
+        <!-- Contenido oculto aquí -->
         <div class="contenido-oculto row container_doble justify-content-between" id="contenido-1">
-            <!-- Contenido oculto aquí -->
             <h2>DISEÑO INDUSTRIAL</h2>
             <div class="col-5">
                 <img src="img/Diseno_Industrial.png" id="imagen_industrial">
@@ -69,7 +69,7 @@
         </div>
         <!-- FILA 2 -->
         <div class="row container_doble" id="bock_click2">
-            <div class="col-5">
+            <div class="col-5" id="bock_click" data-target="contenido-2">
                 <h3 class="titulo-manipulacion">DISEÑO GRÁFICO<span class="triangulo"></span></h3>
             </div>
             <div class="col-7">
